Fix code smells.